--- a/.gitignore
+++ b/.gitignore
@@ -4,12 +4,13 @@
 # These directories contain AI agent configurations and workflow orchestration
 # for the BMAD development methodology - not part of the runtime application.
 
-.bmad                               # BMAD workflow engine and modules
-.agent                              # Agent configuration files
-.cursor                             # Cursor IDE rules
-.claude                             # Claude AI commands
-.gemini                             # Gemini AI configurations
-.github/copilot-instructions.md     # Copilot agent instructions (keep chatmodes/)
+.bmad/
+.agent/
+.cursor/
+.claude/
+.gemini/
+.github/copilot-instructions.md
+.github/chatmodes/
 
 # Workflow status tracking (generated files, not source code)
 docs/bmm-workflow-status.yaml
