--- a/docs/sprint-artifacts/sprint-status.yaml
+++ b/docs/sprint-artifacts/sprint-status.yaml
@@ -38,7 +38,7 @@ story_location: docs/sprint-artifacts
 development_status:
   # Epic 1: Foundation & Core Infrastructure
   epic-1: contexted
-  1-1-project-initialization-repository-setup: backlog
+  1-1-project-initialization-repository-setup: drafted
   1-2-python-backend-scaffolding: backlog
   1-3-chrome-extension-manifest-basic-structure: backlog
   1-4-pyqt5-gui-application-shell: backlog
