Story 1.2: Implement Python Backend Scaffolding
IMPLEMENTATION COMPLETE:
========================

FILES CREATED (3 new files):
- .env.example (27 lines): Configuration template with inline comments
- backend/config/settings.py (42 lines): Pydantic Settings class with type-safe config
- backend/tests/test_main.py (123 lines): 9 comprehensive unit tests

FILES MODIFIED (3 files):
- backend/requirements.txt: Added 6 dependencies (fastapi, uvicorn, pydantic, pydantic-settings, python-multipart, python-dotenv)
- backend/main.py: Replaced 7-line placeholder with 129-line FastAPI app
- README.md: Added backend setup section with installation, configuration, verification, and testing instructions

ACCEPTANCE CRITERIA VALIDATION:
================================

AC1: Backend Dependencies Installed
  - fastapi 0.122.0, uvicorn 0.38.0, pydantic 2.12.5, pydantic-settings 2.12.0
  - python-multipart 0.0.20, python-dotenv 1.2.1
  - All dependencies installed successfully

AC2: Settings Configuration Implemented
  - backend/config/settings.py with Pydantic BaseSettings
  - Default values: API_HOST=127.0.0.1, API_PORT=8765
  - Environment variable loading from .env file
  - Settings import verified

AC3: FastAPI Application Initialized
  - FastAPI app with title, description, version from settings
  - CORS middleware configured for chrome-extension://* origins
  - Startup/shutdown event handlers with logging
  - Root endpoint (GET /) with API information
  - Health check endpoint (GET /api/status)
  - App import verified

AC4: Backend Server Runs Successfully
  - Server binds to 127.0.0.1:8765 (localhost only)
  - Auto-generated docs at /docs and /redoc
  - Ready for uvicorn

AC5: Health Check Endpoint Validated
  - GET /api/status returns JSON with status, version, timestamp
  - HTTP 200 OK, Content-Type: application/json
  - ISO 8601 UTC timestamp with Z suffix
  - Response structure validated by unit tests

AC6: Environment Configuration File Created
  - .env.example created i

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,2 +1,17 @@
-# Backend Python dependencies
-# To be populated in Story 1.2: Python Backend Scaffolding
+# Backend Python Dependencies for AutoResumeFiller
+# Story 1.2: FastAPI Backend Scaffolding
+
+# Core Framework
+fastapi>=0.104.0
+uvicorn[standard]>=0.24.0
+pydantic>=2.5.0
+pydantic-settings>=2.1.0
+
+# HTTP & Utilities
+python-multipart>=0.0.6
+python-dotenv>=1.0.0
+
+# Development Dependencies
+# Note: Testing tools (pytest, black, mypy, pylint) are configured 
+# in pyproject.toml [project.optional-dependencies] for project-wide use.
+# Install with: pip install -e ".[dev]" (future - Epic 1.6)
