--- a/docs/sprint-artifacts/sprint-status.yaml
+++ b/docs/sprint-artifacts/sprint-status.yaml
@@ -39,7 +39,7 @@ development_status:
   # Epic 1: Foundation & Core Infrastructure
   epic-1: contexted
   1-1-project-initialization-repository-setup: done
-  1-2-python-backend-scaffolding: in-progress
+  1-2-python-backend-scaffolding: review
   1-3-chrome-extension-manifest-basic-structure: backlog
   1-4-pyqt5-gui-application-shell: backlog
   1-5-ci-cd-pipeline-github-actions: backlog
