--- a/docs/sprint-artifacts/sprint-status.yaml
+++ b/docs/sprint-artifacts/sprint-status.yaml
@@ -40,7 +40,7 @@ development_status:
   epic-1: contexted
   1-1-project-initialization-repository-setup: done
   1-2-python-backend-scaffolding: done
-  1-3-chrome-extension-manifest-basic-structure: ready-for-dev
+  1-3-chrome-extension-manifest-basic-structure: review
   1-4-pyqt5-gui-application-shell: backlog
   1-5-ci-cd-pipeline-github-actions: backlog
   1-6-testing-infrastructure-first-unit-tests: backlog
