Story 1.4: Implement PyQt5 GUI Application Shell
Created PyQt5 desktop GUI with tabbed interface, system tray integration,
backend health check, and window geometry persistence.

Files created:
- gui/requirements.txt (PyQt5 5.15.10 dependencies)
- gui/windows/__init__.py (package marker)
- gui/windows/main_window.py (QMainWindow with 4 placeholder tabs)
- gui/main.py (QApplication entry point with system tray)

Features:
- 4-tab interface (Monitor, My Data, Settings, Chatbot) with placeholder content
- System tray icon with context menu (Show Dashboard, Exit Application)
- Minimize-to-tray behavior (close button hides window, doesn't exit)
- Backend health check on startup (GET /api/status)
- Status bar with color-coded connection indicator (Connected/Disconnected)
- Window geometry persistence via QSettings (size, position, selected tab)
- Async HTTP with QNetworkAccessManager (non-blocking GUI)

All 8 acceptance criteria verified:
- AC1: GUI launches in <5 seconds
- AC2: 4 tabs displayed with placeholder text
- AC3: System tray icon appears
- AC4: Minimize-to-tray behavior
- AC5: Backend health check on startup
- AC6: Window geometry persistence
- AC7: Async backend communication
- AC8: Error handling for backend unavailable

Story ready for code review.

--- a/gui/requirements.txt
+++ b/gui/requirements.txt
@@ -1,2 +1,10 @@
-# GUI Python dependencies
-# To be populated in Story 1.4: PyQt5 GUI Application Shell
+# PyQt5 GUI Framework
+PyQt5==5.15.10
+PyQt5-Qt5==5.15.2
+PyQt5-sip==12.13.0
+
+# HTTP Client (simpler alternative to QNetworkAccessManager)
+requests==2.31.0
+
+# Optional: PyQt5 Designer tools (for future UI design)
+# pyqt5-tools==5.15.10.1.3
