--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,5 +1,7 @@
-# Release Automation - Placeholder
-# To be implemented in Epic 7: Production Readiness & Distribution
+# Release Automation - Windows Executable Build & GitHub Release
+# Story 1.5: CI/CD Pipeline with GitHub Actions
+# Triggers on version tags (e.g., v1.0.0) to build and release
+
 name: Release
 
 on:
@@ -8,9 +10,49 @@ on:
       - 'v*'
 
 jobs:
-  placeholder:
+  # Build Windows executable with PyInstaller
+  build-windows:
+    runs-on: windows-latest
+    steps:
+      - uses: actions/checkout@v4
+      
+      - name: Set up Python 3.11
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.11'
+      
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r backend/requirements.txt
+          pip install -r gui/requirements.txt
+          pip install pyinstaller
+      
+      - name: Build Windows executable
+        run: pyinstaller --name AutoResumeFiller --onefile gui/main.py
+      
+      - name: Upload Windows executable artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: windows-executable
+          path: dist/AutoResumeFiller.exe
+
+  # Create GitHub release with artifacts and auto-generated notes
+  create-release:
+    needs: build-windows
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - name: Placeholder
-        run: echo "Release automation to be implemented in Epic 7"
+      - uses: actions/checkout@v4
+      
+      - name: Download Windows executable
+        uses: actions/download-artifact@v3
+        with:
+          name: windows-executable
+      
+      - name: Create GitHub Release
+        uses: softprops/action-gh-release@v1
+        with:
+          files: |
+            AutoResumeFiller.exe
+          generate_release_notes: true
+
