--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -11,7 +11,17 @@ pydantic-settings>=2.1.0
 python-multipart>=0.0.6
 python-dotenv>=1.0.0
 
-# Development Dependencies
-# Note: Testing tools (pytest, black, mypy, pylint) are configured 
-# in pyproject.toml [project.optional-dependencies] for project-wide use.
-# Install with: pip install -e ".[dev]" (future - Epic 1.6)
+# Development Dependencies (Story 1.5: CI/CD Pipeline)
+# Testing
+pytest>=7.4.0
+pytest-asyncio>=0.21.0
+pytest-cov>=4.1.0
+
+# Code Quality
+black>=23.11.0
+pylint>=3.0.0
+mypy>=1.7.0
+
+# Build/Distribution
+pyinstaller>=6.3.0
+
