Fix code quality issues for CI/CD pipeline
- Format all Python files with black
- Fix pylint issues (remove unused imports, add PyQt5 to extension-pkg-allow-list)
- Update .pylintrc to ignore line ending warnings (CRLF vs LF)
- Update mypy.ini to handle PyQt5 type checking limitations
- Backend pylint: 8.70/10, GUI pylint: 9.90/10
- mypy backend passes strict mode

All code quality checks ready for CI workflow validation.

--- a/.pylintrc
+++ b/.pylintrc
@@ -2,17 +2,21 @@
 py-version=3.11
 ignore=tests,.venv,build,dist,__pycache__
 load-plugins=
+# Ignore PyQt5 false positives for missing members
+extension-pkg-allow-list=PyQt5
 
 [MESSAGES CONTROL]
 max-line-length=100
 # C0111: missing-docstring
 # C0103: invalid-name (allow short variable names like i, j, k)
+# C0328: unexpected-line-ending-format (Windows CRLF vs Linux LF)
 # R0903: too-few-public-methods (allow simple data classes)
 # W0212: protected-access (allow for testing)
 # W1203: logging-fstring-interpolation (allow f-strings in logs)
 disable=
     C0111,
     C0103,
+    C0328,
     R0903,
     W0212,
     W1203
