--- a/mypy.ini
+++ b/mypy.ini
@@ -9,8 +9,18 @@ strict = True
 # Allow untyped decorators (required for FastAPI route decorators)
 disallow_untyped_decorators = False
 
+# Allow untyped calls (for PyQt5 which has limited type stubs)
+disallow_untyped_calls = False
+
+# Allow missing type hints in 3rd party libraries
+ignore_missing_imports = True
+
 # Exclude test directories from strict type checking
-exclude = ^tests/
+exclude = (?x)(^backend/tests/|^gui/tests/|^tests/)
+
+# Use explicit package bases to handle duplicate module names
+explicit_package_bases = True
+mypy_path = $MYPY_CONFIG_FILE_DIR
 
 # Show error codes for better debugging
 show_error_codes = True
