--- a/docs/sprint-artifacts/sprint-status.yaml
+++ b/docs/sprint-artifacts/sprint-status.yaml
@@ -43,7 +43,7 @@ development_status:
   1-3-chrome-extension-manifest-basic-structure: done
   1-4-pyqt5-gui-application-shell: done
   1-5-ci-cd-pipeline-github-actions: done
-  1-6-testing-infrastructure-first-unit-tests: in-progress
+  1-6-testing-infrastructure-first-unit-tests: review
   1-7-development-environment-documentation: backlog
   epic-1-retrospective: optional
 
