Epic 2 STORIES CREATED: All 8 stories drafted for Local Data Management System
Story Creation Summary:
- Created: 8 comprehensive story specifications
- Total Lines: ~4000+ lines of detailed requirements
- Status: All stories moved from backlog  drafted

Stories Created:

Story 2.1: Data Schema Definition (JSON Structure)
- Effort: Small (1-2 days)
- Priority: Critical
- Pydantic models for PersonalInfo, Education, WorkExperience, Project, Certification, UserProfile
- JSON schema export capability
- 9 acceptance criteria, 10 tasks
- Coverage target: >90%

Story 2.2: File System Data Manager
- Effort: Medium (2-3 days)
- Priority: Critical
- Cross-platform data directory initialization
- Atomic file writes with locking
- Auto-backup system (last 10 backups)
- 9 acceptance criteria, 10 tasks
- Coverage target: >85%

Story 2.3: Resume Document Parser (PDF & DOCX)
- Effort: Large (3-5 days)
- Priority: High
- PDF parsing with pdfplumber (<3 seconds)
- DOCX parsing with python-docx (<1 second)
- Personal info, work, education, skills extraction
- 80%+ accuracy target
- 9 acceptance criteria, 12 tasks
- Coverage target: >75%

Story 2.4: Data Export & Backup Functionality
- Effort: Medium (2-3 days)
- Priority: High
- Complete ZIP export with metadata
- Import with validation and integrity verification
- API key redaction for security
- Export <10s, Import <15s for 100MB
- 9 acceptance criteria, 10 tasks
- Coverage target: >85%

Story 2.5: Multiple Resume/Cover Letter Version Management
- Effort: Medium (2-3 days)
- Priority: Medium
- Version listing with metadata
- Tagging system for categorization
- Default version management
- Metadata persistence in .metadata.json
- 6 acceptance criteria, 6 tasks
- Coverage target: >85%

Story 2.6: Configuration Management (config.yaml)
- Effort: Small (1-2 days)
- Priority: High
- YAML-based configuration persistence
- Get/set with dot notation
- Validation with Pydantic schemas
- Default config on first run
- 6 acceptance criteria, 6

--- a/docs/sprint-artifacts/sprint-status.yaml
+++ b/docs/sprint-artifacts/sprint-status.yaml
@@ -49,14 +49,14 @@ development_status:
 
   # Epic 2: Local Data Management System
   epic-2: contexted
-  2-1-data-schema-definition-json-structure: backlog
-  2-2-file-system-data-manager: backlog
-  2-3-resume-document-parser-pdf-docx: backlog
-  2-4-data-export-backup-functionality: backlog
-  2-5-multiple-resume-cover-letter-version-management: backlog
-  2-6-configuration-management-config-yaml: backlog
-  2-7-conversational-data-update-chatbot-backend: backlog
-  2-8-data-encryption-at-rest: backlog
+  2-1-data-schema-definition-json-structure: drafted
+  2-2-file-system-data-manager: drafted
+  2-3-resume-document-parser-pdf-docx: drafted
+  2-4-data-export-backup-functionality: drafted
+  2-5-multiple-resume-cover-letter-version-management: drafted
+  2-6-configuration-management-config-yaml: drafted
+  2-7-conversational-data-update-chatbot-backend: drafted
+  2-8-data-encryption-at-rest: drafted
   epic-2-retrospective: optional
 
   # Epic 3: AI Provider Integration & Processing
