Epic 3 STORIES CREATED: All 8 AI Provider Integration stories drafted
Story Creation Summary:
- Created: 8 comprehensive story specifications for AI Provider Integration & Processing
- Total Lines: ~3500+ lines of detailed requirements
- Status: All stories moved from backlog  drafted

Stories Created:

Story 3.1: AI Provider Abstract Base Class
- Effort: Small (1-2 days)
- Priority: Critical
- AIProvider ABC with Strategy Pattern
- AIResponse dataclass (8 fields)
- Custom exceptions (ProviderAPIError, InvalidAPIKeyError, RateLimitError)
- Type hints with mypy --strict validation
- 9 acceptance criteria, 7 tasks
- Coverage target: >90%

Story 3.2: OpenAI (GPT) Provider Implementation
- Effort: Medium (2-3 days)
- Priority: Critical
- AsyncOpenAI client integration
- GPT-4 and GPT-3.5-turbo support
- Exponential backoff for rate limiting
- Cost tracking: .03/.06 per 1K tokens (GPT-4)
- Response generation <3 seconds
- 9 acceptance criteria, 10 tasks
- Coverage target: >85%

Story 3.3: Anthropic (Claude) Provider Implementation
- Effort: Medium (2-3 days)
- Priority: High
- AsyncAnthropic client integration
- Claude 3 models (Opus, Sonnet, Haiku)
- 100K context window support
- Cost tracking: / per 1M tokens (Sonnet)
- Provider redundancy/failover
- 9 acceptance criteria, 10 tasks
- Coverage target: >85%

Story 3.4: Google (Gemini) Provider Implementation
- Effort: Medium (2-3 days)
- Priority: Medium
- Google Gemini Pro integration
- Free tier support (60 req/min)
- Async/sync fallback handling
- Cost tracking: .50/.50 per 1M tokens
- Safety settings configuration
- 9 acceptance criteria, 10 tasks
- Coverage target: >80%

Story 3.5: AI Provider Factory & Configuration
- Effort: Small (1-2 days)
- Priority: Critical
- Factory Pattern for provider instantiation
- Runtime provider switching (no restart)
- Config.yaml integration
- OS keyring API key management
- Provider metadata listing
- 6 acceptance criteria, 8 tasks
- Coverage target: >90%

Story 3.6: Form Question 

--- a/docs/sprint-artifacts/sprint-status.yaml
+++ b/docs/sprint-artifacts/sprint-status.yaml
@@ -61,14 +61,14 @@ development_status:
 
   # Epic 3: AI Provider Integration & Processing
   epic-3: contexted
-  3-1-ai-provider-abstract-base-class: backlog
-  3-2-openai-provider-implementation: backlog
-  3-3-anthropic-claude-provider-implementation: backlog
-  3-4-google-gemini-provider-implementation: backlog
-  3-5-ai-provider-factory-configuration: backlog
-  3-6-form-question-analysis-response-type-detection: backlog
-  3-7-response-consistency-context-management: backlog
-  3-8-batch-processing-parallel-ai-calls: backlog
+  3-1-ai-provider-abstract-base-class: drafted
+  3-2-openai-provider-implementation: drafted
+  3-3-anthropic-claude-provider-implementation: drafted
+  3-4-google-gemini-provider-implementation: drafted
+  3-5-ai-provider-factory-configuration: drafted
+  3-6-form-question-analysis-response-type-detection: drafted
+  3-7-response-caching-consistency-management: drafted
+  3-8-batch-processing-parallel-ai-calls: drafted
   epic-3-retrospective: optional
 
   # Epic 4: Form Detection & Field Analysis
